syntax="proto3";

option go_package = "github.com/kiran-blockchain/nextxd-go-advanced/grpc-mongo";

package grpc;

service InventoryService {
    rpc CreateInventory(InventorySKU) returns (InventoryResponse);
    rpc UpdatedInventory(UpdateInventory)returns(InventoryResponse);
}



message InventorySKU {
    string sku = 1;
    Price price = 2;
    float quantity = 3;
    Options options = 4;
}

message Price{
    float base=1;
    string currency=2;
    float discount=3;
}

message Options {
    Size size = 1;
    repeated string features = 2;
    repeated string colors = 3;
    string ruling = 4;
    string image = 5;
}

message Size {
    float h = 1;
    float l = 2;
    float w = 3;
}

message InventoryResponse {
    string Response = 1;
}

message UpdateInventory {
    string sku=1;
    float quantity=2;
}